[gd_scene load_steps=9 format=3 uid="uid://cw7x1s0g4f8vd"]

[ext_resource type="Script" uid="uid://5t5mseu2iex5" path="res://scripts/main_preview.gd" id="1_cdyh7"]
[ext_resource type="PackedScene" uid="uid://d3ghauap52tfs" path="res://scenes/ui/avatar_customisation/avatar_test.tscn" id="1_i3m6c"]
[ext_resource type="PackedScene" uid="uid://d3q3s14fe7ha6" path="res://scenes/ui/avatar_customisation/preview_stage.tscn" id="2_6ix2i"]
[ext_resource type="PackedScene" uid="uid://dskwobcin0gfq" path="res://scenes/archive/avatar_customisation.tscn" id="3_58vre"]
[ext_resource type="PackedScene" uid="uid://su3nynakebv7" path="res://scenes/ui/select_environment.tscn" id="4_k8kk3"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_k8kk3"]

[sub_resource type="Sky" id="Sky_58vre"]
sky_material = SubResource("ProceduralSkyMaterial_k8kk3")

[sub_resource type="Environment" id="Environment_k8kk3"]
background_mode = 2
sky = SubResource("Sky_58vre")
ssr_enabled = true

[node name="MainPreview" type="Node3D"]
script = ExtResource("1_cdyh7")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_k8kk3")

[node name="PreviewStage" parent="." instance=ExtResource("2_6ix2i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.156, 0, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.8660254, -0.35355338, 0.35355338, 0, 0.70710677, 0.70710677, -0.5, -0.6123724, 0.6123724, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.9848077, 0.17364818, 0, -0.17364818, 0.9848077, 0.2, 1.2, 0)
current = true

[node name="AvatarTest" parent="." instance=ExtResource("1_i3m6c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.7)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AvatarCustomizer" parent="CanvasLayer" instance=ExtResource("3_58vre")]
mouse_filter = 2

[node name="SelectEnvironment" parent="CanvasLayer" instance=ExtResource("4_k8kk3")]
visible = false
